--- a/index.html
+++ b/index.html
@@ -1,206 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEGAN-MD • Home</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0B0C10 0%, #1A1F2E 100%);
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            color: #ffffff;
-            padding: 20px;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+  <title>MEGAN-MD | Multi-Device Engineered</title>
+  <style>
+    :root {
+      --primary: #ff1493;
+      --secondary: #00ffff;
+      --accent: #ffd700;
+      --text-light: #ffffff;
+      --dark-bg: #0a0a0f;
+    }
 
-        .container {
-            max-width: 500px;
-            width: 100%;
-            background: rgba(255,255,255,0.05);
-            backdrop-filter: blur(10px);
-            border-radius: 30px;
-            padding: 40px 30px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-            border: 1px solid rgba(255,255,255,0.1);
-            text-align: center;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        .logo {
-            font-size: 4em;
-            margin-bottom: 20px;
-        }
+    body {
+      min-height: 100vh;
+      font-family: 'Segoe UI', 'Arial', sans-serif;
+      color: var(--text-light);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+      flex-direction: column;
+      background: linear-gradient(135deg, #0a0a0f 0%, #1a0033 50%, #0a0a0f 100%);
+    }
 
-        .header h1 {
-            font-size: 2.8em;
-            font-weight: 800;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 10px;
-            letter-spacing: -1px;
-        }
+    /* Animated background gradient */
+    body::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at 30% 50%, rgba(255, 20, 147, 0.2) 0%, transparent 50%),
+                  radial-gradient(circle at 70% 50%, rgba(0, 255, 255, 0.2) 0%, transparent 50%);
+      animation: pulse 8s ease-in-out infinite;
+      z-index: 0;
+    }
 
-        .header h2 {
-            font-size: 1.2em;
-            color: #a0a0a0;
-            font-weight: 400;
-            margin-bottom: 40px;
-        }
+    @keyframes pulse {
+      0%, 100% { opacity: 0.5; }
+      50% { opacity: 1; }
+    }
 
-        .card-container {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            margin: 30px 0;
-        }
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
 
-        .card {
-            background: rgba(255,255,255,0.05);
-            border: 1px solid rgba(255,255,255,0.1);
-            border-radius: 20px;
-            padding: 30px;
-            transition: transform 0.3s, box-shadow 0.3s;
-            cursor: pointer;
-            text-decoration: none;
-            color: white;
-        }
+    .whatsapp-icon {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+    }
 
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 30px rgba(102, 126, 234, 0.2);
-            border-color: #667eea;
-        }
+    .whatsapp-icon img {
+      width: 48px;
+      height: 48px;
+      transition: transform 0.3s ease-in-out, filter 0.3s;
+      filter: drop-shadow(0 0 15px #ff1493);
+      border-radius: 50%;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(5px);
+      padding: 8px;
+    }
 
-        .card-icon {
-            font-size: 2.5em;
-            margin-bottom: 15px;
-        }
+    .whatsapp-icon img:hover {
+      transform: scale(1.2) rotate(5deg);
+      filter: drop-shadow(0 0 25px #00ffff);
+    }
 
-        .card-title {
-            font-size: 1.5em;
-            font-weight: 600;
-            margin-bottom: 10px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+    .container {
+      background: rgba(10, 10, 20, 0.75);
+      backdrop-filter: blur(20px);
+      padding: 50px 40px;
+      border-radius: 30px;
+      max-width: 850px;
+      width: 92%;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+      border: 2px solid rgba(255, 20, 147, 0.3);
+      box-shadow: 0 0 50px rgba(255, 20, 147, 0.3),
+                  0 0 100px rgba(0, 255, 255, 0.2),
+                  inset 0 0 30px rgba(255, 215, 0, 0.1);
+      animation: floatIn 1.2s ease-out;
+    }
 
-        .card-desc {
-            color: #a0a0a0;
-            font-size: 0.9em;
-        }
+    @keyframes floatIn {
+      0% { opacity: 0; transform: translateY(30px) scale(0.95); }
+      100% { opacity: 1; transform: translateY(0) scale(1); }
+    }
 
-        .features {
-            text-align: left;
-            margin: 30px 0;
-            padding: 20px;
-            background: rgba(0,0,0,0.2);
-            border-radius: 15px;
-        }
+    .container h1 {
+      font-size: 3.2rem;
+      background: linear-gradient(135deg, #ff1493, #00ffff, #ffd700);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 5px;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      font-weight: 800;
+      text-shadow: 0 0 20px rgba(255,20,147,0.5);
+      animation: titleGlow 3s infinite alternate;
+    }
 
-        .features h3 {
-            margin-bottom: 15px;
-            color: #667eea;
-        }
+    @keyframes titleGlow {
+      0% { filter: drop-shadow(0 0 10px #ff1493); }
+      100% { filter: drop-shadow(0 0 25px #00ffff); }
+    }
 
-        .features ul {
-            list-style: none;
-        }
+    .subtitle {
+      font-size: 1.3rem;
+      color: #e0e0ff;
+      margin-bottom: 15px;
+      letter-spacing: 2px;
+      font-weight: 300;
+    }
 
-        .features li {
-            margin: 10px 0;
-            padding-left: 25px;
-            position: relative;
-        }
+    .badge {
+      display: inline-block;
+      background: linear-gradient(135deg, #ff1493, #00ffff);
+      padding: 8px 20px;
+      border-radius: 50px;
+      color: #fff;
+      font-weight: bold;
+      font-size: 0.9rem;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      box-shadow: 0 0 20px rgba(255,20,147,0.5);
+      animation: badgePulse 2s infinite;
+    }
 
-        .features li::before {
-            content: "✅";
-            position: absolute;
-            left: 0;
-            color: #4CAF50;
-        }
+    @keyframes badgePulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
 
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            padding-top: 20px;
-            border-top: 1px solid rgba(255,255,255,0.1);
-        }
+    .container p {
+      font-size: 1.1rem;
+      color: #b8b8ff;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(0,255,255,0.3);
+      border-left: 3px solid #ff1493;
+      padding-left: 20px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-        .channel-btn {
-            display: inline-block;
-            background: #1E3A8A;
-            padding: 12px 30px;
-            border-radius: 30px;
-            color: white;
-            text-decoration: none;
-            margin: 15px 0;
-            transition: all 0.3s;
-            border: 1px solid #3B82F6;
-        }
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+      gap: 20px;
+      margin-bottom: 30px;
+    }
 
-        .channel-btn:hover {
-            background: #2563EB;
-            transform: translateY(-2px);
-        }
+    .btn {
+      background: linear-gradient(135deg, #ff1493, #00ffff);
+      border: none;
+      border-radius: 50px;
+      padding: 16px 12px;
+      color: #fff;
+      font-weight: 700;
+      font-size: 16px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 25px rgba(255,20,147,0.4);
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      position: relative;
+      overflow: hidden;
+      border: 1px solid rgba(255,255,255,0.2);
+    }
 
-        .credit {
-            color: #667eea;
-            font-weight: 600;
-            margin-top: 10px;
-            font-size: 1.1em;
-        }
-    </style>
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+      transition: left 0.5s;
+    }
+
+    .btn:hover::before {
+      left: 100%;
+    }
+
+    .btn:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 40px rgba(255,20,147,0.7), 0 0 60px rgba(0,255,255,0.5);
+    }
+
+    .footer {
+      margin-top: 30px;
+      font-size: 15px;
+      color: #a0a0ff;
+      border-top: 1px solid rgba(255,20,147,0.3);
+      padding-top: 25px;
+    }
+
+    .engineer-credit {
+      background: rgba(255,20,147,0.1);
+      padding: 12px 25px;
+      border-radius: 50px;
+      display: inline-block;
+      margin-top: 10px;
+      font-size: 1.1rem;
+      border: 1px solid rgba(255,215,0,0.3);
+    }
+
+    .engineer-credit strong {
+      color: #ffd700;
+      font-size: 1.3rem;
+      text-shadow: 0 0 10px #ffd700;
+    }
+
+    .footer-icons {
+      margin-top: 30px;
+      display: flex;
+      gap: 40px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .footer-icons a img {
+      width: 45px;
+      height: 45px;
+      filter: drop-shadow(0 0 15px #ff1493);
+      transition: all 0.3s ease;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.1);
+      padding: 8px;
+      backdrop-filter: blur(5px);
+    }
+
+    .footer-icons a:hover img {
+      transform: scale(1.2) rotate(5deg);
+      filter: drop-shadow(0 0 25px #00ffff);
+      background: rgba(255,20,147,0.2);
+    }
+
+    audio {
+      display: none;
+    }
+
+    @media (max-width: 480px) {
+      .container h1 {
+        font-size: 2.2rem;
+      }
+      .subtitle {
+        font-size: 1rem;
+      }
+      .whatsapp-icon img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="logo">🤖</div>
-        <div class="header">
-            <h1>MEGAN MD</h1>
-            <h2>WhatsApp Bot Pairing System</h2>
-        </div>
 
-        <div class="card-container">
-            <a href="/pair-page" class="card">
-                <div class="card-icon">🔑</div>
-                <div class="card-title">Pairing Code</div>
-                <div class="card-desc">Generate an 8-digit code to connect your WhatsApp</div>
-            </a>
+  <!-- WhatsApp Channel Icon -->
+  <a class="whatsapp-icon" href="https://whatsapp.com/channel/0029VbB6d0KKAwEdvcgqrH26" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Channel">
+  </a>
 
-            <a href="/scan-page" class="card">
-                <div class="card-icon">📸</div>
-                <div class="card-title">QR Scan</div>
-                <div class="card-desc">Scan QR code with your WhatsApp to connect instantly</div>
-            </a>
-        </div>
+  <div id="particles-js"></div>
 
-        <div class="features">
-            <h3>✨ Features:</h3>
-            <ul>
-                <li>Secure pairing with WhatsApp</li>
-                <li>No phone number stored</li>
-                <li>Instant session generation</li>
-                <li>Works with all WhatsApp versions</li>
-                <li>Free and open source</li>
-            </ul>
-        </div>
+  <div class="container">
+    <h1>𝐌𝐄𝐆𝐀𝐍-𝐌𝐃</h1>
+    <div class="subtitle">⚡ Multi-Device Engineered ⚡</div>
+    <div class="badge">🔧 v2.0.0 | Next-Gen WhatsApp Bot</div>
+    
+    <p>Advanced multi-device session generator engineered for peak performance. Seamless integration, lightning-fast pairing.</p>
 
-        <div class="footer">
-            <a href="https://whatsapp.com/channel/0029VbCWWXi9hXF2SXUHgZ1b" target="_blank" class="channel-btn">
-                📢 Join Our WhatsApp Channel
-            </a>
-            <div class="credit">created by tracker wanga</div>
-        </div>
+    <div class="button-grid">
+      <button class="btn" onclick="window.open('/pair')">🔐 Pair Code</button>
+      <button class="btn" onclick="window.open('/qr')">📱 QR Code</button>
+      <button class="btn" onclick="window.open('https://github.com/mrpopkid/POPKID-GLE')">📦 GitHub</button>
+      <button class="btn" onclick="window.open('https://youtube.com/@pop_kid254')">▶️ YouTube</button>
+      <button class="btn" onclick="window.open('https://wa.me/254111385747')">📞 Contact</button>
+      <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029VbB6d0KKAwEdvcgqrH26')">📢 Channel</button>
     </div>
+
+    <div class="footer">
+      <div class="engineer-credit">
+        🛠️ Engineered by <strong>WANGA</strong> 🛠️
+      </div>
+      <div style="margin-top: 15px;">© 2025 MEGAN-MD. All rights reserved. | Multi-Device Architecture</div>
+    </div>
+
+    <!-- Footer Social Icons -->
+    <div class="footer-icons">
+      <a href="https://youtube.com/@pop_kid254" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+      </a>
+      <a href="https://github.com/mrpopkid" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+      </a>
+      <a href="https://wa.me/254111385747" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+      </a>
+    </div>
+  </div>
+
+  <audio autoplay loop>
+    <source src="https://files.catbox.moe/do5rnz.mp3" type="audio/mp3">
+  </audio>
+
+  <script>
+    particlesJS('particles-js', {
+      particles: {
+        number: { value: 150, density: { enable: true, value_area: 800 } },
+        color: { value: ["#ff1493", "#00ffff", "#ffd700"] },
+        shape: { type: "circle" },
+        opacity: { value: 0.6, random: true },
+        size: { value: 4, random: true },
+        line_linked: { enable: true, distance: 180, color: "#ff1493", opacity: 0.2, width: 1 },
+        move: { enable: true, speed: 2.5, direction: "none", random: true, straight: false }
+      },
+      interactivity: {
+        events: {
+          onhover: { enable: true, mode: "grab" },
+          onclick: { enable: true, mode: "push" }
+        },
+        modes: {
+          grab: { distance: 200, line_linked: { opacity: 0.5 } },
+          push: { particles_nb: 3 }
+        }
+      },
+      retina_detect: true
+    });
+  </script>
+
 </body>
 </html>
